--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-Flask
-Flask-PyMongo
-pymongo
+Flask==2.3.3
+Flask-PyMongo==2.3.0
+Werkzeug==2.3.7
+pymongo==4.5.0
+qiskit==0.44.2
+qiskit-ibm-runtime==0.15.1
+numpy==1.24.3
+python-dotenv==1.0.0
+bson==0.5.10
